Misc. changes to style and organization of website

--- a/_sass/_site_shared.scss
+++ b/_sass/_site_shared.scss
@@ -38,8 +38,8 @@ a:visited {
     div.main_div {
         background-color : #303030;
 
-        width: 80%;
-        min-width: 35%;
+        width: 95%;
+        min-width: 90%;
         max-width: 95%;
 
         line-height: 1.45;
@@ -67,9 +67,9 @@ a:visited {
     div.main_div {
         background-color : #303030;
 
-        width: 725px;
-        min-width: 35%;
-        max-width: 85%;
+        width: 37.5%;
+        min-width: 48em;
+        max-width: 95%;
 
         line-height: 1.45;
         text-align: center;
