--- a/assets/css/bn_page.scss
+++ b/assets/css/bn_page.scss
@@ -5,7 +5,7 @@
 
 $paragraph_border_radius: 0.4em;
 $content_background_color: #393939;
-$content_font_families: Arial, sans-serif;
+$content_font_families: Tahoma, sans-serif;
 
 body {
     background-image: url('/assets/images/bn_background.png');
