--- a/_layouts/pblog_index.html
+++ b/_layouts/pblog_index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="main_div">
       <p class = "super_title">
-        <span> <a href="/pblog.html">Home</a> </span>
+        <span> <a href="/index.html">Home</a> </span>
         <span> </span>
       </p>
       <h1> Blog Posts</h1>
