--- a/_sass/common.scss
+++ b/_sass/common.scss
@@ -1,12 +1,11 @@
 $primary-font-color: #E0E0E0; 
-$primary-font-families: Tahoma, Arial, sans-serif;
+$primary-font-families: Tahoma, sans-serif;
 
 $main-div-color: #303030; 
 $main-div-border-color: #333333;
 
 $paragraph_border_radius: 0.4em;
 $content_background_color: #393939;
-$content_font_families: Arial, sans-serif;
 
 html {
     -webkit-font-smoothing: antialiased;
@@ -20,12 +19,77 @@ body {
 }
 
 
+
+
+
+h1 {
+    text-align: center;
+    text-indent: 0em;
+
+    color: $primary-font-color;
+    
+    font-family: $primary-font-families;
+    font-weight: normal;
+    font-size: 1.9em;
+
+    margin-top: 0.0em;
+    margin-bottom: 0.0;
+
+    padding-top: 0em;
+    padding-bottom: 0em;
+}
+
+h2 {
+    text-align: left;
+    text-indent: 0em;
+
+    color: $primary-font-color;
+
+    font-family: $primary-font-families;
+    font-weight: normal;
+    font-size: 1.5em;
+
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+
+    padding-top: 0em;
+    padding-bottom: 0em;
+    padding-left: 0.5em;
+    padding-right: 0.25em;
+}
+
+h3 {
+    text-align: left;
+    text-indent: 0em;
+
+    color: $primary-font-color;
+
+    font-family: $primary-font-families;
+    font-size: 1em;
+    font-weight: bold;
+
+    padding-left: 0.5em;
+}
+
+h4 {
+    text-align: left;
+    text-indent: 0em;
+
+    color: $primary-font-color;
+
+    font-family: $primary-font-families;
+    font-size: 0.9em;
+    font-weight: bold;
+}
+
+
+
 p {
     color: $primary-font-color;
     font-family: $primary-font-families;
     font-size : 1em;
 
-    line-height: 1.7em;
+    line-height: 1.75em;
 
     text-indent: 2em;
     padding: 0em;
@@ -74,30 +138,6 @@ a:visited {
     padding-right:  0.0em;
 }
 
-p {    
-    border-top-left-radius: $paragraph_border_radius;
-    border-top-right-radius: $paragraph_border_radius;
-    
-    border-bottom-left-radius: $paragraph_border_radius;
-    border-bottom-right-radius: $paragraph_border_radius;
-
-    color: #E0E0E0;
-    font-family: $content_font_families;
-    font-size : 1.2em;
-
-    line-height: 1.7em;
-
-    text-indent: 2em;
-
-    padding-top:    0.5em;
-    padding-bottom: 0.5em;
-    padding-left:   1em;
-    padding-right:  1em;
-
-    margin-top: 0em;
-    margin-bottom: 0em;
-}
-
 img {
     display: block;
     margin-left: auto;
@@ -109,13 +149,9 @@ img {
     div.main_div {
         background-color : $main-div-color;
 
-        width: 95%;
-        min-width: 90%;
+        width: 37.5em;
+        min-width: 80%;
         max-width: 95%;
-
-        line-height: 1.45;
-        text-align: center;
-        text-align: left;
 
         justify-content: center;
 
@@ -124,12 +160,12 @@ img {
         margin-top: 1em;
         margin-bottom: 1em;
 
-        padding-top: 1px;
-        padding-left: 12px;
-        padding-right: 12px;
-        padding-bottom: 12px;
+        padding-top: 0.125em;
+        padding-left: 1em;
+        padding-right: 1em;
+        padding-bottom: 0.75em;
 
-        border-radius: 6px;
+        border-radius: 0.5em;
 
         border: solid $main-div-border-color 1px;
     }
@@ -144,10 +180,6 @@ img {
         min-width: 48em;
         max-width: 95%;
 
-        line-height: 1.45;
-        text-align: center;
-        text-align: left;
-
         justify-content: center;
 
         margin-left: auto;
@@ -155,12 +187,12 @@ img {
         margin-top: 1em;
         margin-bottom: 1em;
 
-        padding-top: 1px;
-        padding-left: 12px;
-        padding-right: 12px;
-        padding-bottom: 12px;
-        
-        border-radius: 6px;
+        padding-top: 0.125em;
+        padding-left: 1em;
+        padding-right: 1em;
+        padding-bottom: 0.75em;
+
+        border-radius: 0.5em;
 
         border: solid $main-div-border-color 1px;
     }
