Updated CSS some more

--- a/_layouts/bblog_index.html
+++ b/_layouts/bblog_index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="/assets/css/blog_post.css">
+    <link rel="stylesheet" href="/assets/css/blog_index.css">
   </head>
   <body>
     <div class="main_div">
