--- a/_layouts/pblog_index.html
+++ b/_layouts/pblog_index.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="/assets/css/blog_post.css">
+    <link rel="stylesheet" href="/assets/css/blog_index.css">
   </head>
   <body>
     <div class="main_div">
       <p class = "super_title">
-        <span> <a href="/index.html">Home</a> </span>
-        <span> </span>
+        <span class="small_text"> <a href="/index.html">Home</a> </span>
       </p>
       <h1> Blog Posts</h1>
         {% for post in site.categories.pblog %}
