--- a/assets/css/major_page.scss
+++ b/assets/css/major_page.scss
@@ -10,8 +10,11 @@ h1 {
 
     color: $primary-font-color;
 
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
+    margin-top: 0.125em;
+    margin-bottom: 0.125em;
+
+    padding-top: 0.125em;
+    padding-bottom: 0.125em;
 }
 
 h2 {
