--- a/_layouts/pblog_post.html
+++ b/_layouts/pblog_post.html
@@ -8,8 +8,8 @@
   <body>
     <div class="main_div">
       <p class = "super_title">
-        <span> <a href="/pblog.html">Blog Index</a> </span>
-        <span>{{ page.date | date: "%B %-d %Y" }}</span>
+        <span class="small_text"> <a href="/pblog.html">Blog Index</a> </span>
+        <span class="small_text">{{ page.date | date: "%B %-d %Y" }}</span>
       </p>
       <h1>{{ page.title }}</h1>
 {{ content }}
