--- a/assets/css/blog_post.scss
+++ b/assets/css/blog_post.scss
@@ -1,217 +1,4 @@
 ---
 ---
 
-@import 'reset', 'common';
-
-$primary-font-color: #E0E0E0;
-
-$heading_color: #e8e8e8;
-$heading_shadow_color : #f0f0f0;
-$heading_shadow_blur_radius : 0.5px;
-
-body {
-    background-image: url('/assets/images/blog_background.png');
-    background-size: 18px;
-    background-color : #232323;
-}
-
-div.post_listing {
-    background-color : #404040;
-    text-align: left;
-
-    padding-top: 9px;
-    padding-left: 8px;
-    padding-right: 8px;
-    padding-bottom: 4px;
-
-    border-radius: 4px;
-
-    margin-top: 0.5em;
-    margin-bottom: 0em;
-}
-
-div.row {
-    display: flex;
-}
-
-div.row::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-p.super_title {
-    display: flex;
-    justify-content: space-between;
-
-    text-indent: 0em;
-    text-align: right;
-
-    padding: auto;
-
-    margin-left: 0.5em;
-    margin-right: 0.5em;
-
-    margin-top: 0.5em;
-    margin-bottom: auto;
-}
-
-.small_text {
-    font-size : 0.85em;
-}
-
-div.post_listing_container {
-    display: flex;
-    justify-content: space-between;
-
-    color: $primary-font-color;
-    font-family: Tahoma, sans-serif;
-    font-size : 1em;
-
-    line-height: 1.7em;
-
-    text-indent: 0em;
-    text-align: right;
-
-    padding: auto;
-
-    margin-left: 0.5em;
-    margin-right: 0.5em;
-
-    margin-top: 0em;
-    margin-bottom: 0em;
-}
-
-p.post_desc {
-    text-indent: 0em;
-}
-
-li {
-    color: $primary-font-color;
-    font-family: Tahoma, sans-serif;
-    font-size : 1.125em;
-
-    line-height: 1.7em;
-}
-
-table {
-    color: $primary-font-color;
-    font-family: 'Courier New', monospace;
-    font-size: 0.9em;
-
-    width: 75%;
-    border: 1px solid;
-    border-left: none;
-    border-right: none;
-    border-bottom: none;
-    border-top: none;
-
-    margin-left: auto; 
-    margin-right: auto;
-
-    text-align: center;
-}
-
-table.wide {
-    width: 95%;
-}
-
-table.narrow {
-    width: 40%;
-}
-
-th.slant {
-    transform:
-        translate(315deg)
-}
-
-ul {
-    color: $primary-font-color;
-    font-family: Tahoma, sans-serif;
-    padding-left: 2em;
-    font-size: 0.9em;
-}
-
-.centered_image {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 75%;
-}
-
-.centered_image_narrow {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 40%;
-}
-
-
-.centered_image_wide {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
-}
-
-code {
-    color: $primary-font-color;
-    font-size: 1em;
-    font-family: Courier, Courier New, monospace;
-    font-weight: normal;
-
-    background-color : #232323;
-
-    display: block;
-
-    padding-top: 0.75em;
-    padding-bottom: 0.5em;
-    padding-left: 1em;
-    padding-right: 1em;
-
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
-    margin-left: 0.5em;
-    margin-right: 0.5em;
-
-    overflow-x: auto;
-
-    border-radius: 4px;
-}
-
-code.language-plaintext {
-    color: $primary-font-color;
-    font-size: 1em;
-    font-family: Courier, Courier New, monospace;
-    font-weight: normal;
-
-    display: inline;
-
-
-    padding-top:    0em;
-    padding-bottom: 0em;
-
-    background-color : #00000000;
-
-    padding-top:    0em;
-    padding-bottom: 0em;
-    padding-left:   0em;
-    padding-right:  0em;
-
-    margin-top:    0em;
-    margin-bottom: 0em;
-    margin-left:   0em;
-    margin-right:  0em;
-
-    border-radius: 0px;
-}
-
-.language-code_block {
-    color: $primary-font-color;
-    font-size: 1em;
-    font-family: Courier, Courier New, monospace;
-    font-weight: normal; 
-
-    display: block;
-    overflow: auto;
-    width: auto;
-}
+@import 'reset', 'common', 'blog';
