--- a/_layouts/singular_page.html
+++ b/_layouts/singular_page.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" type="text/css" href="/assets/css/bn_page.css">
-    <link rel="icon" type="image/x-icon" href="/assets/images/favicons/favicon_gray.png">
+    <link rel="stylesheet" type="text/css" href="/assets/css/blog_post.css">
   </head>
   <body>
     <div class="main_div">
       <p class = "super_title">
-        <span> <a href="/bn/toc.html">Table of Contents</a> </span>
+        <span class="small_text"> <a href="/index.html"> Home </a> </span>
+        <span class="small_text"> </span>
       </p>
       <h1>{{ page.title }}</h1>
 {{ content }}
